--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
 
 {% block body %}
 <nav class="navbar navbar-inverse">
+    <a href="#" class="navbar-brand">
+        <!-- Logo Image -->
+        <img src="https://www.stl.tech/header_files/Sterlite_logo.png" width="45" alt="" class="d-inline-block align-middle mr-2">
+        <!-- Logo Text -->
+        <!-- <span class="text-uppercase font-weight-bold">Sterlite Technologies Ltd</span> -->
+    </a>
     <ul class="nav navbar-nav">
       <li><a href="/">Home</a></li>
       <li><a href="#">Link</a></li>
