--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     </a>
     <ul class="nav navbar-nav">
       <li><a href="/">Home</a></li>
-      <li><a href="#">Link</a></li>
+      <li><a href="/load_data">Refresh Data</a></li>
     </ul>
     <p class="navbar-text">Some text</p>
   </nav>
